TAG: homologyload-tr11886-14
DATE:01/20/2015
STAFF: sc
CHANGES: renamed geishaload.config.default go geisha.config.default
and removed some debug from the geisha preprocessor

TAG: homologyload-tr11886-13
DATE:01/20/2015
STAFF: sc
CHANGES: adding geisha
1) Install - updated to loop through all config files and run install
2) common.config.default - commented out MAIL_LOG_CUR - log not being used
3) geisha.config.default - new
4) bin/homologyload.sh - added USAGE
5) bin/preprocessHGNC.py and bin/preprocessZFIN.py - removed class Marker
6) bin/preprocessGEISHA.sh and bin/preprocessGEISHA.py - new

TAG: homologyload-tr11886-12
DATE:
STAFF: sc
CHANGES: 
1) zfinload.config.default - updated cluster source key to correct value

TAG: homologyload-tr11886-11
DATE: 01/12/2015
STAFF: sc
CHANGES: final checkin zfin stuff
1) zfin.config.default - xpat as 'INPUT_FILE_DEFAULT' file handled by 
    homologyload.sh. gene.txt and mouse_orthos.txt handled by preprocessZFIN.sh
    NUM_COLUMNS updated to 1 (only column required for INPUT_FILE_DEFAULT
2) common.config.default - commented out MAIL_LOG_CUR as nothing going to that 
    log as of yet
3) index.html - restructured to three section HomoloGene, HGNC, ZFIN
4) checkColumns.py - commented out print statement
5) bin/homologyload.sh - removed debug echo's, updated call to checkColumns.py
    echo 'No Sanity Errors' when none found to the sanity report
6) bin/preprocessZFIN.py - removed debug print statements, 
	changed INPUT_FILE_EXPR INPUT_FILE
7) bin/preprocessZFIN.sh - changed from a 'convenience script to use while
    developing' to the PREPROCESSOR for ZFIN as ZFIN must handle three input
    files

TAG: homologyload-tr11886-10
DATE:
STAFF: sc
CHANGES: Initial check in of zfin stuff and misc other stuff
1) homologyload.sh - removed extra check for RELEASE_NO_FILE
2) Install - added zfin
3) checkColumns.py - changed num of args
4) hgncload.config.default - comments only