@@ -88,3 +88,31 @@ See <A HREF="http://mgiwiki/mediawiki/index.php/Homologyload">Homology Load Wiki
 <LI><A HREF="/data/loads/scrum-bob/homology/zfinload/output/MRK_ClusterMember.bcp">MRK_ClusterMember.bcp</A>
 </UL>
 </UL>
+
+<H2>GEISHA Load</H2>
+<UL>
+<H3>Input</H3>
+<UL>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/input/expression.txt">GEISHA Expression Input File</A>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/input/orthology.txt">GEISHA Ortholog Input File</A>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/output/geisha_load.txt">Load Ready Input File</A>
+</UL>
+
+<H3>Logs</H3>
+<UL>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/logs/geishaload.proc.log">Process Log</A>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/logs/geishaload.diag.log">Diagnostic Log</A>
+</UL>
+
+<H3>Reports</H3>
+<UL>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/reports/sanity.rpt">Input File Sanity Report</A>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/reports/qc.rpt">Input File QC Reports</A>
+</UL>
+
+<H3>Output Files</H3>
+<UL>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/output/MRK_Cluster.bcp">MRK_Cluster.bcp</A>
+<LI><A HREF="/data/loads/scrum-bob/homology/geishaload/output/MRK_ClusterMember.bcp">MRK_ClusterMember.bcp</A>
+</UL>
+</UL>
